--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %title Question.ricohmds.sg
     = stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
+    %link{href: "http://fonts.googleapis.com/css?family=Open+Sans", rel:"stylesheet" ,type:"text/css"}/
     %link{href: "//code.jquery.com/ui/1.10.4/themes/blitzer/jquery-ui.css", rel: "stylesheet"}/
     %script{src: "//code.jquery.com/ui/1.10.4/jquery-ui.js"}
     = csrf_meta_tags
