--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,6 +33,7 @@ html, body {
 }
 
 #logo{
+margin-top: 10px !important;  
 position: absolute !important;
 margin-left: 0px !important;
 }
@@ -76,7 +77,7 @@ margin-left: 0px !important;
 }
 
 .bubble {
-background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
+  background-image: linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
 background-image: -o-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
 background-image: -moz-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
 background-image: -webkit-linear-gradient(bottom, rgb(210,244,254) 25%, rgb(149,194,253) 100%);
@@ -98,6 +99,7 @@ background-image: -webkit-gradient(
   position: relative;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
   width: 100%;
+  max-width: 100%;
   word-wrap: break-word;
 }
 
@@ -109,7 +111,7 @@ background-image: -webkit-gradient(
 }
 
 .bubble:before {
-  border: 20px solid transparent;
+  border: 10px solid transparent;
   border-bottom-color: rgba(0, 0, 0, 0.5);
   bottom: 0;
   left: -7px;
@@ -117,43 +119,11 @@ background-image: -webkit-gradient(
 }
 
 .bubble:after {
-  border: 12px solid transparent;
-  border-bottom-color: black;
-  bottom: 0px;
-  left: -11px;
+  border: 8px solid transparent;
+  border-bottom-color: #FFFFFF;
+  bottom: 1px;
+  left: -5px;
 }
-
-.bubble--alt {
-  background-image: linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -o-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -moz-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -ms-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-gradient(
-  linear,
-  left bottom,
-  left top,
-  color-stop(0.25, rgb(172,228,75)),
-  color-stop(1, rgb(122,205,71))
-);
-  float: right;
-}
-
-.bubble--alt:before {
-  border-bottom-color: rgba(0, 0, 0, 0.5);
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -7px;
-}
-
-.bubble--alt:after {
-  border-bottom-color: #ace44b;
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -5px;
-}
-
-
 .alert {
  
   border: solid 1px rgba(0, 0, 0, 0.5);
@@ -162,12 +132,10 @@ background-image: -webkit-gradient(
   box-sizing: border-box;
   clear: both;
   float: left;
-  margin-bottom: 20px;
-  /*padding: 8px 30px;*/
+  margin-bottom: 10px;
   position: relative;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
   width: 100%;
-  /*max-width: 100%;*/
   word-wrap: break-word;
 }
 
@@ -190,45 +158,23 @@ background-image: -webkit-gradient(
   border: 12px solid transparent;
   border-bottom-color: #3fad46;
   bottom: 0px;
-  left: -10px;
+  left: -7px;
 }
 
 .alert-danger:after{
-
   border: 12px solid transparent;
   border-bottom-color: #d9534f;
   bottom: 0px;
-  left: -10px;
-
+  left: -7px;
 }
 
-.alert--alt {
-  background-image: linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -o-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -moz-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -ms-linear-gradient(bottom, rgb(172,228,75) 25%, rgb(122,205,71) 100%);
-  background-image: -webkit-gradient(
-  linear,
-  left bottom,
-  left top,
-  color-stop(0.25, rgb(172,228,75)),
-  color-stop(1, rgb(122,205,71))
-);
-  float: right;
+#wrap > div.container > div, #question_form > div.alert.alert-danger{
+  height: 45px !important;
+  padding-top: 8px !important;
 }
 
-.alert--alt:before {
-  border-bottom-color: rgba(0, 0, 0, 0.5);
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -7px;
+.red{
+  color: red !important;
 }
 
-.alert--alt:after {
-  border-bottom-color: #ace44b;
-  border-radius: 20px / 10px;
-  left: auto;
-  right: -5px;
-}
 
