--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -3,7 +3,7 @@
 
     .navbar-header 
       = image_tag 'logo.JPG', id:'logo'        
-      %h3#main= link_to "Ask Your MD..",  root_path
+      %h3#main= link_to "Ask My MD..",  root_path
 
     - if user_signed_in?      
       .navbar-form.navbar-right
