--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@ html, body {
     height: 100%;
     padding-top: 40px;
     color: white !important;
-    font: 14px !important;   
+    font: 14px !important;
 }
 
 #wrap {
@@ -33,7 +33,7 @@ html, body {
 }
 
 #logo{
-margin-top: 10px !important;  
+margin-top: 10px !important;
 position: absolute !important;
 margin-left: 0px !important;
 }
@@ -125,7 +125,7 @@ background-image: -webkit-gradient(
   left: -5px;
 }
 .alert {
- 
+
   border: solid 1px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   box-shadow: inset 0 5px 5px rgba(255, 255, 255, 0.4), 0 1px 3px rgba(0, 0, 0, 0.2);
@@ -177,4 +177,11 @@ background-image: -webkit-gradient(
   color: red !important;
 }
 
+.black{
+  color: black !important;
+}
 
+.best_in_place{
+  color: blue !important;
+  text-decoration: underline !important;
+}
